--- a/ExpPratica/src/main/resources/application.properties
+++ b/ExpPratica/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/teste_pratico
+# database configs
+spring.datasource.url=jdbc:mysql://localhost:3306/teste_pratica_rev002
 spring.datasource.username=root
 spring.datasource.password=Esqueci213
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.show-sql: true
+
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
